# odoo-TransitOps

./: .gitignore  README.md
backend/: .dockerignore  .env.example  Dockerfile  docker-compose.yml  pyproject.toml
backend/app/: main.py
backend/app/api/: deps.py  router.py
backend/app/api/endpoints/: analytics.py  auth.py  dashboard.py  drivers.py  expenses.py  fuel_logs.py  maintenance.py  trips.py  users.py  vehicles.py
backend/app/core/: celery_app.py  config.py  database.py  security.py
backend/app/models/: __init__.py  driver.py  expense.py  fuel_log.py  maintenance_log.py  role.py  trip.py  user.py  vehicle.py
backend/app/schemas/: __init__.py  analytics.py  dashboard.py  driver.py  expense.py  fuel_log.py  maintenance.py  token.py  trip.py  user.py  vehicle.py
backend/app/services/: __init__.py  analytics_service.py  dashboard_service.py  driver_service.py  expense_service.py  fuel_log_service.py  maintenance_service.py  trip_service.py  user_service.py  vehicle_service.py
backend/app/tasks/: __init__.py  email_tasks.py
backend/tests/: conftest.py
backend/tests/api/: test_analytics.py  test_auth.py  test_dashboard.py  test_drivers.py  test_fleet_manager_flow.py  test_fuel_expenses.py  test_maintenance.py  test_trips.py  test_users.py  test_vehicles.py
backend/tests/flows/: test_dispatcher_flow.py  test_financial_analyst_flow.py  test_fleet_manager_flow.py  test_safety_officer_flow.py
backend/tests/utils/: test_security.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css  main.tsx
(+38 files in other folders)
